--- a/third.html
+++ b/third.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20231223152127">
+	<link rel="stylesheet" href="css/style.min.css?_v=20231223171629">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,11 +29,7 @@
 					</div>
 					<ul class="reviews">
 						<li class="reviews__item">
-							<div class="reviews__image ibg">
-								<picture>
-									<source srcset="img/1.webp" type="image/webp"><img src="img/1.png" alt="User 1">
-								</picture>
-							</div>
+							<div class="reviews__image ibg"><picture><source srcset="img/1.webp" type="image/webp"><img src="img/1.png" alt="User 1"></picture></div>
 							<div class="reviews__content">
 								<h2 class="reviews__name">David Saunders</h2>
 								<p class="reviews__profit">Profit: $39.500</p>
@@ -42,11 +38,7 @@
 							</div>
 						</li>
 						<li class="reviews__item reviews__item_revert">
-							<div class="reviews__image ibg">
-								<picture>
-									<source srcset="img/2.webp" type="image/webp"><img src="img/2.png" alt="User 2">
-								</picture>
-							</div>
+							<div class="reviews__image ibg"><picture><source srcset="img/2.webp" type="image/webp"><img src="img/2.png" alt="User 2"></picture></div>
 							<div class="reviews__content">
 								<h2 class="reviews__name">Pamela Hill</h2>
 								<p class="reviews__profit">Profit: $27.890</p>
@@ -55,11 +47,7 @@
 							</div>
 						</li>
 						<li class="reviews__item">
-							<div class="reviews__image ibg">
-								<picture>
-									<source srcset="img/3.webp" type="image/webp"><img src="img/3.png" alt="User 3">
-								</picture>
-							</div>
+							<div class="reviews__image ibg"><picture><source srcset="img/3.webp" type="image/webp"><img src="img/3.png" alt="User 3"></picture></div>
 							<div class="reviews__content">
 								<h2 class="reviews__name">Clarence Fitzgerald</h2>
 								<p class="reviews__profit">Profit: $31.200</p>
@@ -86,7 +74,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20231223152127"></script>
+	<script src="js/app.min.js?_v=20231223171629"></script>
 </body>
 
 </html>
