--- a/chat.html
+++ b/chat.html
@@ -27,35 +27,13 @@
 						<span class="head__bg"></span>
 
 					</div>
-					<!-- <div class="chat" style="position: relative;">
-						<div class="chat__header">
-							<div class="chat__image ibg"><picture><source srcset="img/chat.webp" type="image/webp"><img src="img/chat.png" alt="avatar"></picture></div>
-							<div class="chat__assistant">
-								<p class="chat__name">Nancy Powell</p>
-								<p class="chat__subname">Messenger</p>
-							</div>
-						</div>
-						<ul class="messages">
-							<li class="messages__item">
-								<div class="messages__image ibg"><picture><source srcset="img/chat.webp" type="image/webp"><img src="img/chat.png" alt="avatar"></picture></div>
-								<div class="messages__text">Hello and welcome to our platform! I am your personal trading assistant. Before we begin, may I know your full name, please?</div>
-							</li>
-							<li class="messages__item messages__item_rtl">
-								<p class="messages__text">Alex Princhel</p>
-							</li>
-							<li class="messages__item">
-								<div class="messages__image ibg"><picture><source srcset="img/chat.webp" type="image/webp"><img src="img/chat.png" alt="avatar"></picture></div>
-								<div class="messages__text">Nice to meet you, [User's name]! I'm here to guide you through our trading platform and help you make the most out of your investments. To get started, please provide your phone number and email address, so we can keep you informed about any important updates and opportunities</div>
-							</li>
-						</ul>
-						<div class="chat__input">
-							<input autocomplete="off" type="text" name="chat" placeholder="Write...">
-							<button type="button">Send</button>
-						</div>
-					</div> -->
 					<div class="chat" style="position: relative;">
 						<div class="chat__header">
-							<div class="chat__image ibg"><picture><source srcset="img/chat.webp" type="image/webp"><img src="img/chat.png" alt="avatar"></picture></div>
+							<div class="chat__image ibg">
+								<picture>
+									<source srcset="img/chat.webp" type="image/webp"><img src="img/chat.png" alt="avatar">
+								</picture>
+							</div>
 							<div class="chat__assistant">
 								<p class="chat__name">Nancy Powell</p>
 								<p class="chat__subname">Messenger</p>
