--- a/second.html
+++ b/second.html
@@ -28,12 +28,14 @@
 						<h1 class="head__title">How it works?</h1>
 						<p class="head__info">This is a trading programme created by leading analysts and programmers. It is based on an advanced meta-clustering algorithm. This programme has not only proven its ability to predict and generate profits at any currency jumps, but has also become the leading system for predicting profitable trades!</p>
 					</div>
-					<div class="head__image ibg"><picture><source srcset="img/second-image.webp" type="image/webp"><img src="img/second-image.png" alt="second"></picture></div>
+					<div class="head__image ibg">
+						<picture>
+							<source srcset="img/second-image.webp" type="image/webp"><img src="img/second-image.png" alt="second">
+						</picture>
+					</div>
 					<div class="head__bottom">
 						<a href="third.html" class="head__link">Explore more</a>
-						<!-- <h2 class="head__subtitle">Make <b>$950</b> to <b>$4200</b> more efficient</h2>
-						<p class="head__info">We invite you to join our trading platform and start taking advatage of the many benefits it has to offer. Don't miss your oportunity!</p>
-						<a href="" class="head__link">Explore more</a> -->
+
 					</div>
 				</div>
 			</section>
