--- a/second.html
+++ b/second.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20231223174320">
+	<link rel="stylesheet" href="css/style.min.css?_v=20231223175123">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,14 +28,12 @@
 						<h1 class="head__title">How it works?</h1>
 						<p class="head__info">This is a trading programme created by leading analysts and programmers. It is based on an advanced meta-clustering algorithm. This programme has not only proven its ability to predict and generate profits at any currency jumps, but has also become the leading system for predicting profitable trades!</p>
 					</div>
-					<div class="head__image ibg">
-						<picture>
-							<source srcset="img/second-image.webp" type="image/webp"><img src="img/second-image.png" alt="second">
-						</picture>
-					</div>
+					<div class="head__image ibg"><picture><source srcset="img/second-image.webp" type="image/webp"><img src="img/second-image.png" alt="second"></picture></div>
 					<div class="head__bottom">
 						<a href="third.html" class="head__link">Explore more</a>
-
+						<!-- <h2 class="head__subtitle">Make <b>$950</b> to <b>$4200</b> more efficient</h2>
+						<p class="head__info">We invite you to join our trading platform and start taking advatage of the many benefits it has to offer. Don't miss your oportunity!</p>
+						<a href="" class="head__link">Explore more</a> -->
 					</div>
 				</div>
 			</section>
@@ -45,7 +43,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20231223174320"></script>
+	<script src="js/app.min.js?_v=20231223175123"></script>
 </body>
 
 </html>
