--- a/chat.html
+++ b/chat.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20231223175123">
+	<link rel="stylesheet" href="css/style.min.css?_v=20231223182110">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,7 +53,7 @@
 							<button type="button">Send</button>
 						</div>
 					</div> -->
-					<div class="chat" style="position: relative;">
+					<div class="chat">
 						<div class="chat__header">
 							<div class="chat__image ibg"><picture><source srcset="img/chat.webp" type="image/webp"><img src="img/chat.png" alt="avatar"></picture></div>
 							<div class="chat__assistant">
@@ -83,7 +83,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20231223175123"></script>
+	<script src="js/app.min.js?_v=20231223182110"></script>
 </body>
 
 </html>
